--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   crossorigin></script>
 
 <script>var Alert = ReactBootstrap.Alert;</script>
-    <title>FoNext</title>
+    <title>Fonext</title>
   </head>
   <body>
     <div id="root"></div>
